tests/specs/run/package_json_type/commonjs/main_mix.out
3
error: Uncaught (in promise) ReferenceError: require is not defined
console.log(require("./add").add(1, 2));
        ^
    at file:///[WILDLINE]main_mix.js:[WILDLINE]
